add response generation, aggragating all external context into input

--- a/rag/rag.ipynb
+++ b/rag/rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,33 +78,104 @@
     "        # if response == \"\":\n",
     "        #     continue\n",
     "        \n",
-    "        print(response)\n",
+    "        # print(response)\n",
     "        filtered_content[url] = response\n",
     "\n",
-    "    return filtered_content\n"
+    "    return filtered_content\n",
+    "\n",
+    "def generate_response(query, content):\n",
+    "    prompt = \"\"\"You are an expert in answering questions about applying to universities for college applicants. \\\n",
+    "        You are given a few documents formatted in markdown. Answer the student's question/query using only the information below. \\\n",
+    "        Omit any irrelevant or duplicate information that might appear. There is no need to cite the sources; only provide a comprehensive answer.\"\"\"\n",
+    "    \n",
+    "    context = \"\"\n",
+    "    for i, (_, text) in enumerate(content.items()):\n",
+    "        if text == \"\":\n",
+    "            continue\n",
+    "\n",
+    "        context += f\"Document {i}:\\n{text}\\n\\n\"\n",
+    "    \n",
+    "    msgs = [\n",
+    "            {\"role\": \"system\", \"content\": prompt},\n",
+    "            {\n",
+    "                \"role\": \"user\", \n",
+    "                \"content\": f\"Here is the student's question: {query}\\n\\nHere are the documents:\\n{context}\"\n",
+    "            }\n",
+    "        ]\n",
+    "    \n",
+    "    response = openai_client.chat.completions.create(model=\"gpt-4o-mini\", messages=msgs).choices[0].message.content\n",
+    "    return response\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'https://nlp.ucsc.edu/': '* Search\\n* Log In\\n \\n* Facebook\\n* X\\n \\n \\nnlp@ucsc.edu\\n* Home\\n* About Us\\n* Program Overview\\n* Apply\\n* News\\n* Contact\\n \\n \\n \\nAPPLICATIONS ARE NOW OPEN!\\n--------------------------\\nWe are currently accepting',\n",
+       " 'https://nlp.ucsc.edu/program-overview/': '* Search\\n* Log In\\n \\n* Facebook\\n* X\\n \\n \\nnlp@ucsc.edu\\n* Home\\n* About Us\\n* Program Overview\\n* Apply\\n* News\\n* Contact\\n \\n \\n \\nPROGRAM OVERVIEW\\n----------------\\n**Natural Language Processing (NLP)** combines',\n",
+       " 'https://nlp.ucsc.edu/admissions/': '* Search\\n* Log In\\n \\n* Facebook\\n* X\\n \\n \\nnlp@ucsc.edu\\n* Home\\n* About Us\\n* Program Overview\\n* Apply\\n* News\\n* Contact\\n \\n \\n \\nADMISSIONS\\n----------\\n**Get ready to apply for Fall 2025 admission consideration',\n",
+       " 'https://nlp.ucsc.edu/people/': '* Search\\n* Log In\\n \\n* Facebook\\n* X\\n \\n \\nnlp@ucsc.edu\\n* Home\\n* About Us\\n* Program Overview\\n* Apply\\n* News\\n* Contact\\n \\n \\n \\nPEOPLE OF NLP\\n-------------\\nLearn more about our team at NLP\\n===================',\n",
+       " 'https://catalog.ucsc.edu/en/current/general-catalog/academic-units/baskin-engineering/computer-science-and-engineering/natural-language-processing-ms': 'Skip to main content\\nCatalog Search\\nSearch Options\\nEntire Catalog\\nPrograms\\nCourses\\nSearch\\nhttp://ucsc.smartcatalogiq.com/\\n4d79df8c\\\\-1311\\\\-4a17\\\\-bdac\\\\-ec90965c14c6\\nhttps://searchproxy.smartcatalogiq.co',\n",
+       " 'https://nlp.ucsc.edu/people/current-students/': '* Search\\n* Log In\\n \\n* Facebook\\n* X\\n \\n \\nnlp@ucsc.edu\\n* Home\\n* About Us\\n* Program Overview\\n* Apply\\n* News\\n* Contact\\n \\n \\n \\nCURRENT STUDENTS\\n----------------\\n1. Home\\n\\xa0\\\\|\\xa03. People\\nMeet our talented studen',\n",
+       " 'https://nlp.ucsc.edu/apply/': '* Search\\n* Log In\\n \\n* Facebook\\n* X\\n \\n \\nnlp@ucsc.edu\\n* Home\\n* About Us\\n* Program Overview\\n* Apply\\n* News\\n* Contact\\n \\n \\n \\nAPPLY TO THE NLP M.S. PROGRAM\\n-----------------------------\\nAPPLY STARTING OCT 1',\n",
+       " 'https://nlp.ucsc.edu/faqs/': '* Search\\n* Log In\\n \\n* Facebook\\n* X\\n \\n \\nnlp@ucsc.edu\\n* Home\\n* About Us\\n* Program Overview\\n* Apply\\n* News\\n* Contact\\n \\n \\n \\nFREQUENTLY ASKED QUESTIONS\\n--------------------------\\n### **Thank you for your i',\n",
+       " 'https://www.gradadmissions.ucsc.edu/nlp': 'Natural Language Processing (M.S.)\\n==================================\\nThe Natural Language Processing program offers a Master of Science degree.\\xa0\\n\\u200b\\n#### Important: Transcripts and Letters of Recommend',\n",
+       " 'https://nlp.ucsc.edu/financials/': ''}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "query = \"what is cse 144 at ucsc\"\n",
+    "query = \"What is the NLP MS program at UCSC\"\n",
     "results = get_search_results(query, \"ucsc.edu\")\n",
     "# get_html(results)\n",
     "# results[\"items\"]\n",
     "content = get_page_content(results)\n",
-    "content"
+    "{url: text[:200] for url, text in content.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filter_content(query, content)"
+    "filtered_content = filter_content(query, content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the NLP MS program at UCSC\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"The Natural Language Processing (NLP) Master of Science program at the University of California, Santa Cruz (UCSC) is an intensive, professional master's program designed to develop expertise in computer programs that understand and generate human language. The program typically spans 15-18 months and is tailored for those with a strong background in computer science, linguistics, and artificial intelligence.\\n\\nKey features of the program include:\\n\\n- **Curriculum**: It emphasizes practical skills through courses focusing on core NLP algorithms, machine learning, and data analytics. The program includes six core courses worth 30 credits, two elective courses for 10 credits, and a 15-unit capstone project that provides real-world experience through team-based projects addressing industry-relevant NLP challenges.\\n\\n- **Industry Collaboration**: Students benefit from close collaboration with an advisory board of industry scientists, guest lectures, mentoring, and networking opportunities, enhancing the academic knowledge with real-world applications.\\n\\n- **Career Outcomes**: Approximately 90% of graduates find employment in NLP and related fields within six months of graduation, aiming to prepare students for a multibillion-dollar industry.\\n\\n- **Admissions Requirements**: To apply, candidates should hold a B.A. or B.S. in Computer Science or a related field with a GPA of 3.0 or better. Strong programming skills and coursework in discrete math, data structures, and probability/statistics are essential.\\n\\n- **Full-Time Commitment**: The program is conducted in-person at UCSC's Silicon Valley campus, expecting full-time enrollment, and is not designed to accommodate part-time students. \\n\\nFor potential applicants, the program does not require GRE scores for admission. However, students are advised to explore external funding opportunities as the program typically expects master's students to be self-supported. \\n\\nTo learn more or to apply, interested students can visit the program's official website.\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(query)\n",
+    "generate_response(query, filtered_content)"
    ]
   }
  ],
