move rag notebook to notebook folder

--- a/notebook/rag.ipynb
+++ b/notebook/rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "search_engine_id = os.getenv(\"SEARCH_ENGINE_ID\")\n",
     "\n",
     "openai_client = OpenAI(api_key=openai_api_key)\n",
-    "async_openai_client = AsyncOpenAI(api_key=openai_api_key)\n",
+    "# async_openai_client = AsyncOpenAI(api_key=openai_api_key)\n",
     "\n",
     "search_url = \"https://customsearch.googleapis.com/customsearch/v1\""
    ]
